[package]
name = "velo"
license = "MIT OR Apache-2.0"
description = "App for brainstorming & sharing ideas 🦀 Learning Project"
repository = "https://github.com/StaffEngineer/velo.git"
readme = "Readme.md"
version = "0.1.4"
edition = "2021"
publish = false

exclude = ["assets/fonts/*", "velo.gif", "velo.png"]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'

[workspace]
members = [
    "crates/bevy-markdown",
]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
  "bevy_gizmos",
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "png",
  "x11",
] }
base64 = "0.21.0"
serde_json = "1.0.94"
uuid = { version = "1.3.0", default-features = false, features = ["v4", "js"] }
bevy_pkv = { git = "https://github.com/StaffEngineer/bevy_pkv", branch = "bevy-main", default-features = false, features = [
  "bevy",
  "rocksdb",
] }
serde = { version = "1.0", features = ["derive"] }
linkify = "0.9.0"
ehttp = "0.1.0"
async-channel = "1.8"
image = { version = "0.24.5", default-features = false, features = ["ico"] }
bevy_ui_borders = { git = "https://github.com/StaffEngineer/bevy_ui_borders", branch = "bevy-main" }
bevy_embedded_assets = { git = "https://github.com/StaffEngineer/bevy_embedded_assets", branch = "bevy-main" }
bevy-markdown = { path = "crates/bevy-markdown" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.61", default-features = false, features = ["Window", "Location"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
url = "2.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [ "basis-universal" ] }
arboard = "3.2.0"
open = "4.0.1"
toml = "0.7.3"
#bevy_hanabi = { git="https://github.com/flmng0/bevy_hanabi", default-features = false, features = [ "2d" ] }
rand = "0.8.5"
tantivy = "0.19.2"
directories = "5.0"
env_logger = "0.10.0"

[dev-dependencies]
tempfile = "3.5.0"

[package.metadata.bundle]
name = "velo"
identifier = "com.rust.velo"
icon = ["128x128.icns"]
