[package]
name = "velo"
license = "MIT OR Apache-2.0"
description = "App for brainstorming & sharing ideas 🦀 Learning Project"
repository = "https://github.com/StaffEngineer/velo.git"
readme = "Readme.md"
version = "0.8.4"
edition = "2021"

exclude = ["assets/fonts/*", "velo.gif", "velo.png"]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'

[workspace]
members = [
    "crates/bevy_markdown",
]

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "png",
  "x11",
] }
bevy_embedded_assets = { version = "0.8" }
base64 = "0.21.0"
serde_json = "1.0.94"
uuid = { version = "1.3.0", default-features = false, features = ["v4", "js"] }
serde = { version = "1.0", features = ["derive"] }
linkify = "0.9.0"
ehttp = "0.1.0"
async-channel = "1.8"
image = { version = "0.24.5", default-features = false, features = ["ico"] }
cosmic-text = { version = "0.9" }
bevy_markdown = { path = "crates/bevy_markdown" }
bevy_cosmic_edit = { version = "0.8" }
bevy_prototype_lyon = { version = "0.9" }
# TODO: point to official releases that support bevy 0.11
bevy_pancam = { git = "https://github.com/StaffEngineer/bevy_pancam", rev = "2608088" }
bevy_pkv = { git = "https://github.com/StaffEngineer/bevy_pkv", rev = "d55de2e", default-features = true }
bevy_smud = { git = "https://github.com/StaffEngineer/bevy_smud", rev = "7db39d1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.11", default-features = false, features = [ "webgl2" ] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.61", default-features = false, features = ["Window", "Location"] }
wasm-bindgen = "0.2.86"
js-sys = "0.3.61"
url = "2.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# TODO: point to crates.io when it's published
bevy_hanabi = { git = "https://github.com/djeedai/bevy_hanabi", rev = "e013d27", default-features = false, features = [ "2d" ] }
arboard = "3.2.0"
open = "4.0.1"
toml = "0.7.3"
rand = "0.8.5"
tantivy = "0.19.2"
directories = "5.0"
env_logger = "0.10.0"

[dev-dependencies]
tempfile = "3.5.0"

[package.metadata.bundle]
name = "velo"
identifier = "com.rust.velo"
icon = ["128x128.icns"]