[package]
name = "bevy_cosmic_edit"
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy cosmic-text multiline text input"
repository = "https://github.com/StaffEngineer/velo/tree/main/crates/bevy_cosmic_edit"
readme = "Readme.md"
keywords = ["bevy"]

exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "1e73312", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "png",
  "x11",
] }
cosmic-text = { git = "https://github.com/pop-os/cosmic-text", rev = "79275d1" }
image = "0.24.6"
sys-locale = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "1e73312", default-features = false, features = [ "webgl2" ] }
js-sys = "0.3.61"

[dev-dependencies]
insta = "1.29.0"

[[example]]
name = "basic_button"

[[example]]
name = "basic_sprite"

[[example]]
name = "font_per_widget"

[[example]]
name = "multiple_sprites"

[[example]]
name = "readonly"
