[package]
name = "bevy_markdown"
version = "0.2.0"
license = "MIT OR Apache-2.0"
description = "Bevy markdown renderer"
repository = "https://github.com/StaffEngineer/velo/tree/main/crates/bevy_markdown"
edition = "2021"
keywords = ["bevy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "1.0.0-alpha.9"
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"] }
cosmic-text = { version = "0.9" }

[dev-dependencies]
insta = "1.29.0"