[package]
name = "bevy_pkv"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
description = "Persistent key value store for apps/games"
keywords = ["gamedev", "key-value-store", "bevy"]
categories = ["game-development"]
repository = "https://github.com/johanhelsing/bevy_pkv"

[dependencies]
thiserror = "1.0"
serde = "1.0"
bevy_ecs = { git = "https://github.com/bevyengine/bevy" ,rev = "25f013ba1b809e9f962dafbefaeb860512f386e8",optional = true } # we need for deriving Resource in PkvStore

[features]
default = ["bevy", "sled"]
bevy = ["dep:bevy_ecs"]
rocksdb = ["dep:rocksdb"]
sled = ["dep:sled"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", default-features = false, features = ["Storage", "Window"] }
wasm-bindgen = { version = "0.2", default-features = false }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rocksdb = { version = "0.20", optional = true }
sled = { version = "0.34", optional = true }
rmp-serde = "1.1"
directories = "5.0"

[dev-dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy",rev = "25f013ba1b809e9f962dafbefaeb860512f386e8", default-features = false }
strum_macros = "*"

[build-dependencies]
cfg_aliases = "0.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1"
easybench-wasm = "0.2"
web-sys = { version = "0.3", default-features = false, features = ["console"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "inserts"
harness = false

[[example]]
name = "basic"
required-features = ["bevy"]

[[example]]
name = "migration"
required-features = ["bevy"]

[[example]]
name = "enumkeys"
required-features = ["bevy"]
